# researchhub-backend

./: .codecov.yml  .gitignore  .sonarcloud.properties  .tool-versions  AGENTS.md  AMPLITUDE_IMPLEMENTATION_SUMMARY.md  API_CHANGES.md  CLAUDE.md  Dockerfile  Elasticsearch.md  LICENSE  Makefile  Pipfile  README.md  db_config.sample.py  deploy_lambda.sh  deploy_lambda_production.sh  deploy_lambda_staging.sh  docker-compose.yml  dump.rdb  keys.sample.py  nonprofit-fundraise-integration-guide.md  openalex_performance_improvements.md  personalize_items_20251028_192531.csv  personalize_items_20251029_184205.csv  personalize_items_20251030_165354.csv  personalize_items_20251030_173537.csv  personalize_items_20251030_183314.csv  personalize_items_20251030_185533.csv  personalize_items_20251030_194025.csv  personalize_items_20251030_194446.csv  personalize_items_20251030_195723.csv  personalize_items_20251030_200220.csv  personalize_items_20251030_200434.csv  personalize_items_20251030_200643.csv  personalize_items_20251030_201038.csv  pyproject.toml  refresh_discussion_count.py  requirements.txt  sonar-project.properties  (+3 more)
src/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  Procfile  celerybeat-schedule-wal  celerybeat-schedule.db  deploy_lambda.sh  deploy_production  deploy_staging  dump.rdb  manage.py  newrelic.ini  pd_rsc_dist.csv  pyproject.toml  requirements-dev.txt  requirements.txt  rsc_distribution.csv  rsc_distribution.txt  start-celery.sh  start-es.sh  start-kibana.sh
src/.ebextensions/: 01-supervisor.config  05-files.config  10-python.config  11-celery.config  12-upgradepip.config  20-migrate.config  25-daphne.config  30-collectstatic.config  40-apache.config  50-cermine.config  50-download-keystore  celery-worker.sh  celery.sh  daphne.config  download-keystore.sh  gzip.config  supervisor-setup.sh  supervisord.config
src/.elasticbeanstalk/: config.yml
src/.tmp/: personalize_interactions.csv
src/ai_expert_finder/: apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py
src/ai_peer_review/: admin.py  apps.py  constants.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py
src/analytics/: README_PERSONALIZE.md  SETUP.md  __init__.py  amplitude.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  views.py
src/assistant/: apps.py  models.py
src/bullet_point/: admin.py  apps.py  exceptions.py  filters.py  models.py  permissions.py  serializers.py  views.py
src/citation/: apps.py  constants.py  consumers.py  csl_constants.py  exceptions.py  filters.py  models.py  permissions.py  routing.py  schema.py  signals.py  tasks.py  utils.py
src/config/: db.py  keys.py  twitter.py  wallet.py
src/discussion/: __init__.py  admin.py  apps.py  constants.py  lib.py  models.py  permissions.py  reaction_models.py  reaction_serializers.py  reaction_views.py  review_serializer.py  serializers.py  signals.py  tests.py  utils.py  validators.py  views.py
src/ethereum/: __init__.py  apps.py  contracts.py  lib.py  urls.py  utils.py  views.py
src/feed/: FEED_MANAGEMENT_GUIDE.md  README_PERSONALIZE.md  activity_feed_dto.py  apps.py  cache_segment.py  feed.md  feed_config.py  feed_configs.py  feed_list_dto.py  feed_manager.py  filtering.py  filters.py  fund_best_score.py  hot_score.py  hot_score_DEPRECATED.py  hot_score_breakdown.py  hot_score_utils.py  journal_v2_filters.py  journal_v2_serializers.py  models.py  ordering.py  related_work.py  serializers.py  serializers_optimized.py  tasks.py  views.py
src/funding_dashboard/: apps.py  serializers.py  utils.py
src/google_analytics/: __init__.py  apps.py  signals.py  utils.py  views.py
src/grobid/: Dockerfile
src/hub/: __init__.py  admin.py  apps.py  constants.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  utils.py  views.py
src/hypothesis/: __init__.py  apps.py  models.py
src/institution/: apps.py  models.py  openalex_institutions.json  serializers.py  tests.py
src/invite/: __init__.py  apps.py  models.py
src/mailing_list/: apps.py  exceptions.py  lib.py  models.py  serializers.py  tasks.py  views.py
src/new_feature_release/: apps.py  models.py  serializers.py  tests.py  views.py
src/nonprofit/: urls.py  views.py
src/nonprofit_orgs/: apps.py  urls.py  views.py
src/note/: __init__.py  apps.py  consumers.py  models.py  routing.py  tests_api.py  urls.py
src/notification/: consumers.py  models.py  routing.py  serializers.py  tests.py  token_auth.py  views.py
src/notifications/: consumers.py  models.py  routing.py  serializers.py
src/oauth/: __init__.py  adapters.py  apps.py  exceptions.py  helpers.py  models.py  orcid_views.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
src/orcid/: apps.py  tasks.py  views.py
src/organizations/: models.py  serializers.py  urls.py  views.py
src/paper/: __init__.py  admin.py  altmetric_tasks.py  apps.py  aws_lambda.py  consumers.py  documents.py  exceptions.py  filters.py  index.py  lib.py  manubot.py  models.py  openalex_tasks.py  openalex_util.py  paper_upload_tasks.py  permissions.py  routing.py  scholarcy.py  serializers.py  signals.py  summarizer.py  tasks.py  test_helpers.py  tests.py  utils.py  views.py
src/pdf/: README.md  fetcher.py  resolver.py  resolver_test.py  web_scraping.py
src/peer_review/: __init__.py  apps.py  models.py  permissions.py
src/personalize/: apps.py  tasks.py  types.py
src/prediction_market/: __init__.py  apps.py  filters.py  models.py  permissions.py  signals.py  utils.py
src/profiler/: __init__.py  apps.py  models.py  tasks.py
src/proxy/: views.py
src/purchase/: __init__.py  apps.py  coinbase_cors_decorators.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  utils.py  views.py
src/referral/: __init__.py  apps.py  constants.py  models.py  referral_invite_view.py  referral_view.py  serializers.py  urls.py  views.py
src/reputation/: __init__.py  admin.py  apps.py  distributions.py  distributor.py  lib.py  (+9 more)
(+3396 files in other folders)
