[tool.poetry]
name = "researchhub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
arxiv = "^1.4.8"
beautifulsoup4 = "4.12.2"
bibtexparser = {version = "^2.0.0b3", allow-prereleases = true}
black = "24.4.2"
boto3 = "1.34.69"
celery = "5.4.0"
celery-redbeat = "2.2.0"
channels = "^4.1.0"
channels-redis = "^4.2.0"
cloudscraper = "^1.2.60"
daphne = "^4.1.2"
dj-rest-auth = "^2.2.2"
Django = "5.1.3"
django-allauth = "0.50.0"
django-celery-beat = "2.0.0"
django-celery-results = "2.5.1"
django-contrib-comments = "1.9.2"
django-cors-headers = "3.5.0"
django-dbbackup = "4.0.2"
django-debug-toolbar = "4.2"
django-elasticsearch-debug-toolbar = "2.0.0"
django-elasticsearch-dsl = "7.3.0"
django-elasticsearch-dsl-drf = "0.22.5"
django-extensions = "3.0.9"
django-filter = "2.4.0"
django-health-check = "^3.18.3"
django-ipware = "3.0.1"
django-mjml = "1.2"
django-ses = "3.5.2"
django-silk = "5.0.2"
django-simple-history = "3.7.0"
django-storages = "1.10.1"
djangorestframework = "3.15.2"
djangorestframework-api-key = "2.2"
elastic-apm = "6.13.2"
elasticsearch = "7.13.4"
elasticsearch-dsl = "7.3.0"
feedparser = "6.0.8"
flake8 = "5.0.4"
flower = "^2.0.1"
google-api-python-client = "1.12.1"
habanero = "1.0.0"
html5lib = "1.1"
ipdb = "0.13.9"
iso8601 = "1.0.2"
jellyfish = "0.8.9"
lxml = "4.9.4"
mailchimp-marketing = "^3.0.72"
manubot = "0.5.3"
Markdown = "^3.3.7"
numpy = "<2.0.0"
pandas = "^2.2.3"
pdf2doi = "1.5"
Pillow = "10.4.0"
postgres = "^4.0"
pre-commit = "2.17.0"
psycopg2-binary = "2.9.10"
PyJWT = "2.8.0"
PyMuPDF = "1.21.0"
python = "^3.11"
pyyaml = "6.0.1"
q5-django-inlinecss = "0.0.2"
requests-mock = "^1.12.1"
responses = "0.21.0"
segment-analytics-python = "^2.2.3"
sentry-sdk = "1.45.1"
setuptools = "^75.4.0"
Sift = "^5.6.1"
smart-open = "5.2.1"
stripe = "2.62.0"
watchdog = "2.1.9"
web3 = {version = "6.17.1", extras = ["tester"]}
xmltodict = "0.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
coverage = ">=7.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
